--- a/MyAwesomeApp/springboot-lb.yaml
+++ b/MyAwesomeApp/springboot-lb.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: my-angular-app
-        image: srinurkt/mywebapp:latest
+        image: kdevopscoaching/mywebapp:latest
         imagePullPolicy: Always
         ports:
         - containerPort: 8085
